resolve build error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}  # ghcr.io/OWNER/REPO
+  IMAGE_NAME: ${{ github.repository_owner | lower }}/${{ github.event.repository.name | lower }}
 
 jobs:
   deploy:
