--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,8 +60,10 @@ jobs:
           registryUrl: ghcr.io
           registryUsername: ${{ github.actor }}
           registryPassword: ${{ secrets.GHCR_PAT }}
+          secrets: |  
+            openai-api-key=${{ secrets.OPENAI_API_KEY }}
           environmentVariables: |
-            OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+            OPENAI_API_KEY=secretref:openai-api-key
             OPENAI_MODEL=gpt-4o-mini
             MODEL_TEMPERATURE=0.2
           targetPort: 8000
